--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,8 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-
+  width: 100%;
+  height: 100%;
 }
 
 /* stylelint-disable */
@@ -14,3 +15,7 @@ html {
   box-sizing: inherit;
 }
 /* stylelint-enable */
+
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
