--- a/src/index.css
+++ b/src/index.css
@@ -3,8 +3,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  width: 100%;
-  height: 100%;
+  overflow: auto;
 }
 
 /* stylelint-disable */
@@ -18,4 +17,5 @@ html {
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  font-size: 1.5rem;
 }
