Added new graph and added more constants

--- a/src/components/UI/D3/earningChart/earningChart.module.css
+++ b/src/components/UI/D3/earningChart/earningChart.module.css
@@ -1,10 +1,3 @@
-.colourMedic {
-    background-color:#F1DEA0;
-    width: 6.5rem;
-    height: 1.9rem;
-}
-
-
 .subject {
     padding-left: 1.7rem;
 }
@@ -15,19 +8,10 @@
     margin-top: 2rem;
 }
 
-
-.colourShoes {
-    background-color:#ACC39F;
+.colour {
     width: 6.5rem;
     height: 1.9rem;
 }
-
-.colourFashion {
-    background-color:#CAB1C5;
-    width: 6.5rem;
-    height: 1.9rem;
-}
-
 
 .outer {
     width: 64rem;
