--- a/src/components/UI/LoadWatcherCard /loadwatchercard.module.css
+++ b/src/components/UI/LoadWatcherCard /loadwatchercard.module.css
@@ -2,18 +2,17 @@
     font-weight: 600;
     font-size: 16px;
     line-height: 24px;
-
 }
 
 .sectorCard {
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 20px 25px -5px rgba(134, 118, 255, 0.10), 0 10px 10px -5px rgba(134, 118, 255, 0.08);
     border-radius: 12px;
     padding: 2rem;
     padding-bottom: 3rem;
     padding-top: 3rem;
     height: 30rem;
     overflow: auto;
-
+    background-color: white;
     margin-top: 2rem;
 }
 
