--- a/src/components/UI/SectorCard/sectorcard.module.css
+++ b/src/components/UI/SectorCard/sectorcard.module.css
@@ -1,23 +1,18 @@
-.title {
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 24px;
-
-}
-
 .sectorCard {
-    box-shadow: 0px 10px 25px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 20px 25px -5px rgba(134, 118, 255, 0.10), 0 10px 10px -5px rgba(134, 118, 255, 0.08);
     border-radius: 12px;
     padding: 2rem;
     padding-bottom: 3rem;
     padding-top: 3rem;
     margin-top: 2rem;
+    background-color: white;
 }
 
 .circle {
     background: #EEDEA7;
-    width: 1rem;
-    height: 1rem;
+    width: 0.5rem;
+    height: 0.5rem;
+    margin-right: 1rem;
     border-radius: 50%;
 }
 
@@ -25,18 +20,12 @@
     display: flex;
     justify-content: right;
     align-items:center;
-    gap: 1rem;
 }
 
 .sectorLayout {
     display: grid;
-    grid-template-columns: 9rem 6rem 6rem;
+    grid-template-columns: 11rem 6rem 6rem;
     grid-gap: 4.8rem;
-}
-
-
-.used {
-    color: #9B9B9B;
 }
 
 
