--- a/src/components/UI/card/card.module.css
+++ b/src/components/UI/card/card.module.css
@@ -1,7 +1,3 @@
-.title {
-    font-size: 1.6rem;
-}
-
 .wrapper {
     display: flex;
     flex-flow: row;
@@ -9,27 +5,21 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
-
-.number  {
-    font-size: 3.4rem;
-    font-weight: bold;
-}
-
-
  .green{
     font-size: 1.4rem;
-    color: green;
+    font-family: 'Poppins';
+    color: #00B928;
     padding-left: 1rem;
+    font-weight: 500;
+
 }
 
 .red {
     font-size: 1.4rem;
-    color: red;
+    color: #FD2D2D;
+    font-family: 'Poppins';
     padding-left: 1rem;
+    font-weight: 500;
 
-}
 
-.tagline  {
-    color: #9B9B9B;
-    font-size: 1.2rem;
 }
