--- a/src/components/UI/nav/nav.module.css
+++ b/src/components/UI/nav/nav.module.css
@@ -1,9 +1,10 @@
 
 .bulletPoint {
     border-radius: 50%;
-    width: 1.6rem;
-    height: 1.6rem;
-    background-color: #82b2d1;
+    width: 1.3rem;
+    height: 1.3rem;
+    background-color: #DCDFF2;
+    transition:all ease-in-out 200ms  ;
 }
 
 .bulletPointWrapper {
@@ -17,6 +18,8 @@
     justify-content: space-evenly;
     align-items: baseline;
     bottom: 5rem;
+    position: absolute;
+    z-index: 100;
 }
 
 .pos {
@@ -26,7 +29,11 @@
 
 .bulletPointActive {
     border-radius: 50%;
-    width: 1.6rem;
-    height: 1.6rem;
-    background-color: #0026ff;
+    width: 1.3rem;
+    height: 1.3rem;
+    background-color: #023AFF;
+}
+
+.bulletPoint:hover {
+    background-color: #023AFF;
 }
