--- a/src/components/UI/timeRange/timeRange.module.css
+++ b/src/components/UI/timeRange/timeRange.module.css
@@ -1,8 +1,10 @@
 .timeWrapper {
+    position: absolute;
     display: grid;
     justify-content: center;
     align-items: center;
-    margin-top: 1rem;    
+    margin-top: 1rem;   
+    left: 45%; 
 }
 
 .timeIndiccator {
@@ -15,16 +17,21 @@
 }
 
 .label {
-    display: flex;
-    justify-content: center;
-    padding-top: 1.2rem;
     cursor: pointer;
-    width: 7rem;
     font-weight: bold;
-    border-radius: 20.1px;
+    border-radius: 8rem;
+    padding: 0.5rem;
+    padding-left: 1.5rem;
+    padding-right: 1.5rem;
     background-color: white;
     font-size: 1.6rem;
-    height:4rem;
+    font-family: 'Poppins';
+    font-weight: normal;
+}
+
+.label:nth-child(4) {
+    margin-left: 1.5rem;
+    margin-right: 1.5rem;
 }
 
 .input {
@@ -32,9 +39,10 @@
 }
 
 .input:checked + .label {
-    background-color: #072FBE;
+    background-color:  #3347E6;
     color: white;
-    box-shadow: 0px 0px 18.8437px rgba(50, 71, 230, 0.3);
+    font-weight: 600;
+
 }
 
 .buttonsWrapper {
