--- a/src/components/pages/servers/servers.module.css
+++ b/src/components/pages/servers/servers.module.css
@@ -1,17 +1,96 @@
 
 .layout {
   display: grid;
-  justify-content: center;
+  justify-content: space-evenly;
   align-content: center;
-  grid-template-columns: 35rem 100rem;
-  grid-gap: 10rem;
+  grid-template-columns: 36.5rem 100rem;
+  grid-gap: 30rem;
+  position: relative;
+  overflow: hidden;
+  height: 100vh;
+  
+}
+
+.cirkleTwo {
+  position: absolute;
+  grid-area: 1;
+  height: 80rem;
+  width: 80rem;
+  background: white;
+  border-radius: 50%;
+  z-index: -4;
+
+  left: 43.3%;
+  top: 7%;
+}
+
+.cirkleStripes{
+  position: absolute;
+
+  grid-area: 1;
+  height: 60rem;
+  width: 60rem;
+  background: transparent;
+  border-radius: 50%;
+  z-index: -3;
+
+
+  left: 47%;
+  top: 14.5%;
+}
+
+.animation {
+  animation-name: rotation;
+  animation-duration: 50s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+}
+
+.cirkleThree  {
+  position: absolute;
+  grid-area: 1;
+  width: 140rem;
+  background: #EEF1FA;
+  height: 140rem;
+  border-radius: 50%;
+  z-index: -5;
+  left: 29%;
+
+}
+
+.sphere {
+  position: relative;
+  overflow: hidden;
+  display: grid;
+  align-items: center;
+  width: 102vw;
+  height: 100vh;
+  z-index: -5;
+}
+
+.cirkleOne {
+  position: absolute;
+  grid-area: 1;
+  height: 35rem;
+  width: 35rem;
+  background: white;
+  border-radius: 50%;
+  box-shadow: 0 10px 15px -3px rgb(134 118 255 / 21%);
+  left: 55.5%;
+  top: 30%;
+}
+
+.wrapper {
+  position: absolute;
+  left: -4rem;
 }
 
 .chartsWrapper {
   display: grid;
   position: relative;
-  margin-left: 15rem;
+  margin-left: 0rem;
   margin-top: 8rem;
+
 }
 
 .chartTotalWrapper {
@@ -24,7 +103,7 @@
     position: relative;
     height: 75rem;
     width: 75rem;
-    border: 1rem solid;
+    border: 1rem #efe1fc solid;
     border-radius: 50%;
   }
   
@@ -37,15 +116,19 @@
     transform-origin: bottom right;
   }
 
-  .title {
-    font-weight: 600;
-    font-size: 35px;
-  }
-
-
   .cardsWrapper {
     display: grid;
+    margin-top: 3rem;
+    grid-gap: 4rem;
   }
+
+
+  @keyframes rotation {
+    0%   {transform: rotate(0deg);}
+    100%   {transform: rotate(360deg);}
+
+  }
+
 
 .item:nth-child(1) {
     transform: rotate(0deg);
