--- a/src/components/pages/servers/servers.module.css
+++ b/src/components/pages/servers/servers.module.css
@@ -55,7 +55,7 @@
   border-radius: 50%;
   z-index: -5;
   left: 29%;
-
+  animation: pulse 4s infinite;
 }
 
 .sphere {
@@ -127,6 +127,33 @@
     0%   {transform: rotate(0deg);}
     100%   {transform: rotate(360deg);}
 
+  }
+
+
+  @-webkit-keyframes pulse {
+    0% {
+      -webkit-box-shadow: 0 0 0 0 rgba(163, 183, 240, 0.4);
+    }
+    70% {
+        -webkit-box-shadow: 0 0 0 40px rgba(204,169,44, 0);
+    }
+    100% {
+        -webkit-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
+  }
+  @keyframes pulse {
+    0% {
+      -moz-box-shadow: 0 0 0 0 rgba(163, 183, 240, 0.4);
+      box-shadow: 0 0 0 0 rgba(163, 183, 240, 0.4);
+    }
+    70% {
+        -moz-box-shadow: 0 0 0 10px rgba(204,169,44, 0);
+        box-shadow: 0 0 0 40px rgba(204,169,44, 0);
+    }
+    100% {
+        -moz-box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+        box-shadow: 0 0 0 0 rgba(204,169,44, 0);
+    }
   }
 
 
