Added the new server view

--- a/src/components/UI/nav/nav.module.css
+++ b/src/components/UI/nav/nav.module.css
@@ -37,3 +37,11 @@
 .bulletPoint:hover {
     background-color: #023AFF;
 }
+
+.bulletPointsWrapper {
+    position: absolute;
+    bottom: 1.5rem;
+    z-index: 50;
+    left: 47%;
+    
+}
