--- a/src/components/UI/LoadWatcherCard /loadwatchercard.module.css
+++ b/src/components/UI/LoadWatcherCard /loadwatchercard.module.css
@@ -8,8 +8,8 @@
     box-shadow: 0 20px 25px -5px rgba(134, 118, 255, 0.10), 0 10px 10px -5px rgba(134, 118, 255, 0.08);
     border-radius: 12px;
     padding: 2rem;
-    padding-bottom: 3rem;
-    padding-top: 3rem;
+    padding-bottom: 2rem;
+    padding-top: 2rem;
     height: 30rem;
     overflow: auto;
     background-color: white;
@@ -33,7 +33,9 @@
 .sectorLayout {
     display: grid;
     grid-template-columns: 9rem 6rem 6rem;
-    grid-gap: 4.8rem;
+    grid-gap: 2.8rem;
+    justify-content: center;
+    align-items: center;
 }
 
 .used {
