--- a/src/components/UI/SectorCard/sectorcard.module.css
+++ b/src/components/UI/SectorCard/sectorcard.module.css
@@ -6,6 +6,8 @@
     padding-top: 3rem;
     margin-top: 2rem;
     background-color: white;
+    overflow: auto;
+    height: 37rem;
 }
 
 .circle {
@@ -25,7 +27,9 @@
 .sectorLayout {
     display: grid;
     grid-template-columns: 11rem 6rem 6rem;
-    grid-gap: 4.8rem;
+    grid-gap: 3.5rem;
+    justify-content: center;
+    align-items: center;
 }
 
 
