--- a/src/components/UI/D3/earningChart/earningChart.module.css
+++ b/src/components/UI/D3/earningChart/earningChart.module.css
@@ -17,7 +17,8 @@
 .outer {
     width: 64rem;
     height: 58.8rem;
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .categories {
