--- a/src/components/UI/D3/analyticsChart/analyticsChart.module.css
+++ b/src/components/UI/D3/analyticsChart/analyticsChart.module.css
@@ -17,9 +17,10 @@
 }
 
 .outer{ 
-    width: 90rem;
+    width: 88rem;
     height: 52rem;
-    overflow-y: auto;
+    overflow-y: hidden;
+    overflow-x: auto;
     padding-left: 3rem;
     padding-top: 2rem;
 }
