--- a/src/components/pages/analytics/analytics.module.css
+++ b/src/components/pages/analytics/analytics.module.css
@@ -1,30 +1,26 @@
 .cardsWrapper {
     display: grid;
-    grid-template-columns: 30rem 30rem 30rem ;
-    justify-content: space-between;
-    margin-left: 13rem;
-    margin-right: 13rem;
-
-    grid-gap: 10rem;
+    grid-template-columns: 28rem 28rem 28rem ;
+    justify-content: center;
+    grid-gap: 2rem;
+    margin-bottom: 2rem;
 
 }
 
 .chartsWrapper {
     display: grid;
-    grid-template-columns: 90rem 70rem;
-    grid-gap: 6rem;
+    grid-template-columns: 88rem 90rem;
+    grid-gap: 2rem;
     align-content: center;
+    justify-content: center;
     border-radius: 1rem;
-    padding: 2.2rem;
     padding-bottom: unset;
     padding-left: 5rem;
     padding-right: 5rem;
     margin-left: 8rem;
     position: relative;
     overflow: hidden;
-    height: 68rem;
-    margin-bottom: 0rem;
-    margin-right: 8rem;
+    height: 82rem;
 }
 
 
@@ -38,18 +34,15 @@
 }
 
 .box {
-    padding: 1rem;
-    border-radius: 6rem;
     display: grid;
-    grid-gap: 3rem;
 }
 
 .bg { 
      background-color: #EDEFF9; 
      border-radius: 50%;
-     width: 65rem;
-     height: 65rem;
-     margin-left: 5rem;
+     width: 77rem;
+     height: 77rem;
+     margin-left: 6rem;
      display: grid;
      align-content: center;
      justify-content: center;
@@ -58,5 +51,5 @@
 .aquistionChart {
     position: relative;
     overflow: hidden;
-    height: 65rem;
+    height: 80rem;
 } 
