--- a/src/index.css
+++ b/src/index.css
@@ -38,7 +38,7 @@
 html {
   box-sizing: border-box;
   font-size: 62.5%;
-  overflow: auto;
+  overflow: hidden;
 }
 
 /* stylelint-disable */
@@ -59,4 +59,3 @@ body {
 .hidden {
   display: none;
 }
-
